# middleware/userValidator.js
@@ -1,0 +1,29 @@
+const Validator = require('validatorjs');
+
+const validateUser = (req, res, next) => {
+  const data = req.body;
+
+//   if (req.body.jobLink && !req.body.jobLink.startsWith('http')) {
+//     req.body.jobLink = 'https://' + req.body.jobLink;
+//   }
+
+  const rules = {
+    name: 'required|string|min:5|max:50',
+    email: 'required|email',
+    password: 'required|string|min:6',
+    date: 'date'
+  };
+
+  const validation = new Validator(data, rules);
+
+  if (validation.fails()) {
+    return res.status(400).json({
+      message: 'Validation failed',
+      errors: validation.errors.all()
+    });
+  }
+
+  next(); // move to controller if validation passes
+};
+
+module.exports = validateUser;
